Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34171

When resetting a string property for a custom widget in Qt Designer it does not reset to the initial value it ends up empty

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 4.8.6, 5.2.0 RC1
    • 4.8.5, 5.1.1
    • Tools: Designer
    • None
    • qttools / Qt 5.2 RC: 78d8ee2513bdf52da2e0141be93dfe7bab8a1488 Qt 4.8.6: 088fe949570ce31aba6d9b97a4084195cbb3b9e1

      When resetting a string property for a custom widget in Qt Designer it does not reset to the initial value it ends up empty. With the attached example which provides a custom widget, modify the TestWidget property and then reset it. Instead of reverting back to the original initial value it ends up empty.

        1. TestWidget.zip
          2 kB
        2. qtbug34171.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes